...
    <string name="progress_download_sequence_message">Downloading sequence from server…</string>
    <string name="progress_general_title">Please wait</string>
    <string name="progress_deleting_message">Deleting…</string>
    <string name="progress_searching_message">Searching…</string>
    <string name="progress_saving_message">Saving…</string>
    <string name="progress_uploading_message">Uploading…</string>
    <string name="progress_resource_download_message">Downloading resource…</string>
    <string name="progress_resource_load_message">Loading resource…</string>
    <string name="progress_loading_preset_message">Loading preset…</string>
    <string name="progress_importing_file_message">Importing file…</string>
    <string name="progress_running_message">Running…</string>
    <string name="progress_oauth">Loading your account on\n%1$s\nfor OAuth authorisation…</string>
    <string name="progress_building_imagery_database">Building imagery database…</string>
...
    <string name="unparseable_coordinates">Unparseable coordinates</string>
    <string name="network_required">Network is required for location lookup</string>
    <string name="no_nominatim_server">No configured Nominatim server found</string>
    <string name="no_nominatim_result">Nominatim server didn\'t find %1$s</string>
    <!-- Menu -->
    <string name="menu_move">Move</string>
    <string name="menu_edit">Edit…</string>
    <string name="menu_add">New</string>
    <string name="menu_config">Preferences</string>
    <string name="menu_find">Find place…</string>
    <string name="menu_help">Help</string>
    <string name="menu_view">View…</string>
    <string name="menu_erase">Erase node</string>
    <string name="menu_set_position">Set position…</string>
    <string name="menu_split">Split</string>
...
    <string name="urldialog_resource_download_successful">Resource downloaded.</string>
    <string name="urldialog_api_exists">An API with this URL already exists. However, you may add another one (e.g. to switch accounts easily).</string>
    <string name="urldialog_add_api">Add API…</string>
    <string name="urldialog_nodata_text">The configuration URL does not contain valid data.</string>
    <string name="urldialog_add_geocoder">Add geocoder…</string>
    <string name="urldialog_add_image_store">Add image storage…</string>
    <string name="urldialog_add_style">Add style…</string>
    <!-- API configuration -->
    <string name="api_name">API name</string>
    <string name="api_url">API URL</string>
    <string name="readonly_url">Read-only API URL (optional)</string>
    <string name="notes_url">Notes API URL (optional)</string>
    <string name="copy_of">Copy of %1$s</string>
...
    <string name="wikimedia_meta_description">Description</string>
    <string name="wikimedia_meta_source">Source</string>
    <string name="wikimedia_meta_author">Author</string>
    <string name="wikimedia_meta_licence">Licence</string>
    <string name="wikimedia_meta_category">Category</string>
    <!-- common terms -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="default_">Default</string>
    <string name="regular_expression">Regular expression</string>
    <string name="state">State</string>
    <string name="Continue">Continue</string>
...
