<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="10dp">

    <TextView
        android:id="@+id/listedit_labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

	<EditText
        android:id="@+id/listedit_editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="text">
        <requestFocus />
	</EditText>
	
    <TextView
        android:id="@+id/listedit_labelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url" />
    
    <EditText
        android:id="@+id/listedit_editValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" />

</LinearLayout>