...
        android:text=""
        android:descendantFocusability="blocksDescendants"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:clickable="false" />
    <ImageButton
        android:id="@+id/listItemMenu"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="?attr/colorPrimary"
        android:src="?attr/more_small" />
</view>
